# castle-game

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  castle-game.d.ts  castle-game.js  castle-game_bg.wasm  castle-game_bg.wasm.d.ts  index.html  rust-toolchain.toml
.github/workflows/: rust.yml
assets/: settings.toml
assets/debug/: vector.toml
assets/font/: debug.toml  torus-sans.toml
assets/level/: grass-1.toml
assets/object/: crate-1.toml
assets/projectile/: spear-1.toml
assets/unit/: enemy-spear.toml  spear.toml
castle-game/: castle-game.js  castle-game_bg.wasm
ci/: before_deploy.sh
mock-inspector-derive/: Cargo.toml
mock-inspector-derive/src/: lib.rs
src/: ai.rs  assets.rs  audio.rs  buffer.rs  camera.rs  color.rs  constants.rs  debug.rs  draw.rs  font.rs  game.rs  geom.rs  gui.rs  input.rs  inspector.rs  level.rs  log.rs  main.rs  math.rs  object.rs  physics.rs  projectile.rs  random.rs  solid_shape.rs  sprite.rs  terrain.rs  timer.rs  turret.rs  unit.rs  window.rs  world.rs
src/draw/: colored_mesh.rs  colored_mesh.wgsl  mesh.rs  mod.rs  svg.rs
src/geometry/: breakable.rs  mod.rs  polygon.rs  split.rs  transform.rs
src/graphics/: healthbar.rs  mod.rs
src/map/: mod.rs  terrain.rs
src/physics/: constraint.rs  gravity.rs  mod.rs  position.rs  resting.rs  rigidbody.rs  rotation.rs  velocity.rs
src/physics/collision/: mod.rs  sat.rs  shape.rs  spatial_grid.rs
src/physics/constraint/: distance.rs  ground.rs  mod.rs  penetration.rs
src/projectile/: arrow.rs  collision.rs  event.rs  mod.rs  rock.rs  spawner.rs
src/ui/: fps.rs  mod.rs  recruit_button.rs  spawn_bar.rs  theme.rs
src/unit/: bundle.rs  closest.rs  definitions.rs  faction.rs  health.rs  human.rs  mod.rs  spawner.rs  unit_type.rs  walk.rs
src/weapon/: bow.rs  discharge.rs  mod.rs  spear.rs
web/: index.html
