[package]
name = "castle-game"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/castle-game"

readme = "README.md"
description = "2D destructible terrain strategy game"

repository = "https://github.com/tversteeg/castle-game.git"
keywords = ["game", "2d", "destructible"]
categories = ["games"]

[features]
default = ["debug"]
debug = ["line_2d"]

[dependencies]
winit = "0.28"
log = "0.4"
web-time = "0.2"
pixels = "0.13"
bytemuck = "1"
blit = "0.8"
game-loop = { version = "0.10", features = ["winit"] }
miette = { version = "5", features = ["fancy"] }
image = { version = "0.24", default-features = false, features = ["png"] }
winit_input_helper = "0.14"
rotsprite = "0.1"
vek = "0.16"
assets_manager = { version = "0.10", features = ["embedded", "hot-reloading", "toml", "png"], default-features = false }
serde = "1"
arrayvec = "0.7"
itertools = "0.11"
parry2d-f64 = { version = "0.13", features = ["simd-stable"] }
line_2d = { version = "0.5", optional = true }
hecs = { version = "0.10", features = ["macros"] }
bvh-arena = "1.1.3"
raqote = { version = "0.8.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
fastrand = "2"
puffin = "0.16"
puffin_http = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = { version = "1", features = ["wasm-bindgen", "color"] }
console_error_panic_hook = "0.1"
fastrand = { version = "2", default-features = false, features = ["js"] }
puffin = "0.16"

[workspace]
members = ["run-wasm"]
