[package]
name = "castle-game"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/castle-game"

readme = "README.md"
description = "2D destructible terrain strategy game"

repository = "https://github.com/tversteeg/castle-game.git"
keywords = ["game", "2d", "destructible"]
categories = ["games"]

[features]
default = ["debug"]
debug = ["drawille"]

[dependencies]
blit = "0.8"
miette = { version = "5", features = ["fancy"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rotsprite = "0.1"
vek = "0.16"
assets_manager = { version = "0.10", features = ["embedded", "hot-reloading", "toml", "png"], default-features = false }
serde = "1"
itertools = "0.12"
parry2d-f64 = { version = "0.13", features = ["simd-stable"] }
hecs = { version = "0.10", features = ["macros"] }
bvh-arena = "1"
raqote = { version = "0.8", default-features = false }
bitvec = "1"
line_drawing = "1"
drawille = { version = "0.3", optional = true }
spiral = "0.2"
pixel-game-lib = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2"
puffin = "0.17"
puffin_http = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2", default-features = false, features = ["js"] }
puffin = "0.17"

[workspace]
members = ["run-wasm"]
